  search) with types for numbers, dates, etc needed for analytics and also
  not_analyzed set for all id* type entity fields
- Added EntityServices.search#CountBySource service to do analytics
  searches using ElasticSearch; there is a real-world example of the use of
  this service in Mantle for current and projected inventory data

Bug Fixes:

- Fixed issue with link.@dynamic-load-id attribute loading the result of
  the load() function instead of doing nothing but calling the load method;
  this caused issues in browsers like FireFox that render the result of a
  a.@href javascript: expression
- Fixed issue with sparse screen paths (starting with a '//') where a
  high-level screen like the echopath screen with @allow-extra-path=true
  would be used instead of a more complete, and correct, match; sparse
  paths no longer allow extra path elements, which is desirable for
  intended use of sparse paths to specify target screens, transitions, and
  sub-screen resources; extra path elements generally come in request URLs
  where sparse paths are not allowed anyway
- Fixed issue where adding ".xml" to a request URL for a screen would treat
  the screen XML file as a sub-screen resource and return the contents; now
  treats screen XMl files as if they don't exist, ie results in a 404 error
- Fixed issue with EntityFind where if a ListCondition with an OR operator
  was passed before passing other conditions then the top-level conditions
  would be OR'ed together instead of AND'ed
- Fixed issues with Date (without time, ie java.sql.Date) parsing and
  formatting due to weirdness with time zone and truncating the time part
  of the Date representation in long millis since epoch; see comments in
  L10nFacadeImpl.groovy for more details


===========================================================================
Release 1.5.0 - 07 Mar 2015
===========================================================================
